ExpressionFinder/log.txt
main.cpp: In function ‘int main()’:
main.cpp:115:63: error: ‘MAX_GENERATIONS’ was not declared in this scope
   cout << "The program could not find a solution in over " << MAX_GENERATIONS << " generations" << endl;
                                                               ^
